Change to Stream.toList()